@@ -15,40 +15,62 @@
 #    along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 from __future__ import print_function, unicode_literals, absolute_import, division
-from six.moves import input
+
+import six
+
+import os
+import platform
+import sys
+
+import pkg_resources
+
 
 from reahl.dev.devdomain import Project
 from reahl.dev.devshell import WorkspaceCommand
 
-from reahl.webdev.webserver import ReahlWebServer
+from reahl.webdev.webserver import ReahlWebServer, ServerSupervisor
+
 
 class ServeCurrentProject(WorkspaceCommand):
-    """Serves the project in the current directory."""
+    """Serves the project configured in the given directory (defaults to ./etc)."""
     keyword = 'serve'
 
-    options = [('-p', '--port', dict(action='store', dest='port', default=8000, help='port (optional)'))]
+    options = [('-p', '--port', dict(action='store', type='int', dest='port', default=8000, help='port (optional)')),
+               ('-s', '--seconds-between-restart', dict(action='store', type='int', dest='max_seconds_between_restarts', 
+                                                        default=3, 
+                                                        help='poll only every n seconds for filesystem changes (optional)')),
+               ('-d', '--monitor-directory', dict(action='append', dest='monitored_directories', default=[],
+                                                 help='add a directory to monitor for changes'
+                                                 ' (the current directory is always included)')),
+               ('-D', '--dont-restart', dict(action='store_false', dest='restart', default=True, 
+                                             help='run as unsupervised server which does not monitor for filesystem changes'))]
 
     def execute(self, options, args):
         project = Project.from_file(self.workspace, self.workspace.startup_directory)
-        config_directory = 'etc'
-        if args:
-            config_directory = args[0]
-
-        print('\nUsing config from %s\n' % config_directory)
-            
         with project.paths_set():
-            reahl_server = self.start_server(options, config_directory)
+            try:
+                if options.restart:
+                    ServerSupervisor(sys.argv[1:]+['--dont-restart'],
+                                     options.max_seconds_between_restarts,
+                                     ['.']+options.monitored_directories).run()
+                else:
+                    config_directory = 'etc'
+                    if args:
+                        config_directory = args[0]
 
-            print('\n\nServing http on port %s, https on port %s (config=%s)' % \
-                                     (options.port, int(options.port)+363, config_directory))
-            print('\nPress <Enter> to terminate\n\n')
-    
-            input()        
-            reahl_server.stop()
+                    print('\nUsing config from %s\n' % config_directory)
+
+                    reahl_server = ReahlWebServer.fromConfigDirectory(config_directory, options.port)
+                    reahl_server.start(connect=True)
+                    print('\n\nServing http on port %s, https on port %s (config=%s)' % \
+                                     (options.port, options.port+363, config_directory))
+                    terminate_keys = 'Ctrl+Break' if platform.system() == 'Windows' else 'Ctrl+C'
+                    print('\nPress %s to terminate\n\n' % terminate_keys)
+
+                    reahl_server.wait_for_server_to_complete()
+            except KeyboardInterrupt:
+                print('\nShutting down')
         return 0
 
 
-    def start_server(self, options, config_directory):  
-        reahl_server = ReahlWebServer.fromConfigDirectory(config_directory, int(options.port))
-        reahl_server.start(connect=True)
-        return reahl_server
+
